fixed typo calander --> Calendar
Signed-off-by: dhimanparas20 <dhimanparas20@gmail.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                 <li><a class="dropdown-item" target="_blank" href='https://www.eduqfix.com/PayDirect/#/student/pay/1OHQRPe16eEggvcMCADtC86BIfKNLGx6UsMKbzkIB4EJycJdnbMtz589iBs9VnWz/1832'>Pay semester fee</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://www.himtu.ac.in/old-question-papers-for-b-tech/'>Sample Question Papers</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://www.geonlinehub.com/HPTUReval25Dec2022/NewRegistrationByRollNo.aspx'>Online Re-evaluation form</a></li>
-                <li><a class="dropdown-item" target="_blank" href='https://abvgiet.ac.in/storage/app/media/uploaded-files/academic-calander-2022-2023-odd-sem.pdf'>Current Academic calander</a></li>
+                <li><a class="dropdown-item" target="_blank" href='https://abvgiet.ac.in/storage/app/media/uploaded-files/academic-calander-2022-2023-odd-sem.pdf'>Current Academic Calendar</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://abvgiet.ac.in/storage/app/media/TimeTable%20Signed992022.pdf'>Time-Table</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://www.himtu.ac.in/examination-time-table/'>Examination Time-Table</a></li>
               </ul>
