--- a/templates/home.html
+++ b/templates/home.html
@@ -34,6 +34,8 @@
     <span class="visually-hidden">Next</span>
   </button>
   </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9853210829451716"
+     crossorigin="anonymous"></script>
 
   <main>
       <!-- Marketing messaging and featurettes
