--- a/templates/base.html
+++ b/templates/base.html
@@ -30,11 +30,13 @@
     {%block style%}{%endblock%}
     </style>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9853210829451716"
+    crossorigin="anonymous"></script>
+
     </head>
 
  
   <body class="text-bg-dark">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
     <!--NAV BAR-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
