--- a/templates/base.html
+++ b/templates/base.html
@@ -47,6 +47,16 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<!-- test -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-9853210829451716"
+     data-ad-slot="3676373200"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!--NAV BAR-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
