Update college Site
Signed-off-by: dhimanparas20 <dhimanparas20@gmail.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,18 +35,6 @@
  
   <body class="text-bg-dark">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9853210829451716"
-     crossorigin="anonymous"></script>
-<!-- test -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-9853210829451716"
-     data-ad-slot="3676373200"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
     <!--NAV BAR-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -72,7 +60,7 @@
                 <li><a class="dropdown-item" target="_blank" href='https://www.eduqfix.com/PayDirect/#/student/pay/1OHQRPe16eEggvcMCADtC86BIfKNLGx6UsMKbzkIB4EJycJdnbMtz589iBs9VnWz/1832'>Pay semester fee</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://www.himtu.ac.in/old-question-papers-for-b-tech/'>Sample Question Papers</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://www.geonlinehub.com/HPTUReval25Dec2022/NewRegistrationByRollNo.aspx'>Online Re-evaluation form</a></li>
-                <li><a class="dropdown-item" target="_blank" href='https://abvgiet.ac.in/storage/app/media/uploaded-files/academic-calander-2022-2023-odd-sem.pdf'>Current Academic Calendar</a></li>
+                <li><a class="dropdown-item" target="_blank" href='https://drive.google.com/file/d/1bSal__-9iaQi5pdgKt8n0wmmLxkJouik/view?usp=share_link'>Current Academic Calendar</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://abvgiet.ac.in/storage/app/media/TimeTable%20Signed992022.pdf'>Time-Table</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://www.himtu.ac.in/examination-time-table/'>Examination Time-Table</a></li>
               </ul>
@@ -86,7 +74,6 @@
                 <li><a class="dropdown-item" href={{ url_for('convert') }}>Number System Conversion</a></li>
                 <li><a class="dropdown-item" href={{ url_for('image') }}>Any-Image</a></li>
                 <li><a class="dropdown-item" href={{ url_for('bus_timing') }}>Bus timings</a></li>
-                <li><a class="dropdown-item" href={{ url_for('message') }}>Send Anonymous Messages</a></li>
                 <li><a class="dropdown-item" href={{ url_for('contacts') }}>Important Contacts</a></li>
                 <li><a class="dropdown-item" href={{ url_for('qr') }}>QR Code Generator</a></li>
               </ul>
