--- a/templates/bus_timing.html
+++ b/templates/bus_timing.html
@@ -10,6 +10,7 @@
 <a style="font-size: 20px;">---NOTE---<br>- Bus timings are 5-10minute early from their actual arrival<br>
   - We do not guarantee the assurity of a bus on a specific time.<br>
   - This list is still being edited. <br>
+  - Source: MST<br>
    </a><br>
 <img src="/static/bus_timing.png" height="500" width="500"><br><br>
 <h1 style="text-align:left"><mark>Bus timings from Shimla to Gumma</mark></h1><br>
