--- a/templates/download.html
+++ b/templates/download.html
@@ -6,21 +6,21 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   
   <main class="px-3">
-    <h1>1st Semester Combined</h1>
+    <h1>1st Year Combined Notes</h1>
     <p class="lead">
       <a href="https://drive.google.com/drive/u/1/folders/1t2gpL1Xzj-TmahRp-44PigwQdQm010dO" target="_blank" class="btn btn-lg btn-light fw-bold border-dark bg-white">View</a>
 
       <br><hr>
-      <h3>3rd Sem</h3>
+      <h3>3rd Sem Notes</h3>
       <p><a href="https://drive.google.com/drive/u/1/folders/17MpYGMojOpIbNaQWxpIVIF0X32wAnl_K" target="_blank" class="btn btn-lg btn-light fw-bold border-white bg-white">View</a></p>
       <hr>
-      <h3>4th Sem</h3>
+      <h3>4th Sem Notes</h3>
       <p><a href="https://drive.google.com/drive/u/1/folders/1tvfU1NDQTpfD7KVAVwWeQJlgeQ_yR5pt" target="_blank" class="btn btn-lg btn-light fw-bold border-white bg-white">View</a></p>
       <hr>
-      <h3>5th Sem</h3>
+      <h3>5th Sem Notes</h3>
       <p><a href="https://drive.google.com/drive/u/1/folders/1UWHTm0CJrrI25EoTTqkG-rcIH4VBlGZg" target="_blank" class="btn btn-lg btn-light fw-bold border-white bg-white" rel="noopener noreferrer" target="_blank">View </a></p>            
       <hr>
-      <h3>6th Sem</h3>
+      <h3>6th Sem Notes</h3>
       <p><a href="https://drive.google.com/drive/u/1/folders/1NMTciyXJQl6YoqGWiVEMor51shhMuYf6" target="_blank" class="btn btn-lg btn-light fw-bold border-white bg-white">View</a></p>
       <hr>
       </p>
