--- a/templates/home.html
+++ b/templates/home.html
@@ -47,24 +47,24 @@
         <div style="border: 1px solid white; border-radius: 30px; padding: 15px; min-width:100px; display: inline-block" >
         <div class="row ">
           <div class="col-lg-4 ">
-            <img src="/static/calculator.jpeg" alt="Avatar" class="avatar">
-            <h2 class="fw-normal">Lecture Calculator</h2>
-            <p>Is your current attendance below 75% ? We can calculate the No. of lectures you need to attend to prevent detention</p>
-            <p><a class="btn btn-secondary" href={{ url_for('lecture_predict') }}>View details »</a></p>
+            <img src="/static/fees.png" alt="Avatar" class="avatar">
+            <h2 class="fw-normal" target="_blank" >Pay Semester Fees</h2>
+            <p>Pay 2nd, 4th, 6th semester fees directly from here. No need to hassle arround the college website.</p>
+            <p><a class="btn btn-secondary" target="_blank" href='https://www.eduqfix.com/PayDirect/#/student/pay/1OHQRPe16eEggvcMCADtC86BIfKNLGx6UsMKbzkIB4EJycJdnbMtz589iBs9VnWz/1832'>Pay Now »</a></p>
           </div><!-- /.col-lg-4 -->
+
           <div class="col-lg-4">
-            <img src="/static/convert.png" alt="/static/convert.png" class="avatar">
-            <h2 class="fw-normal">Base Conversion</h2>
-            <p>Convert values from one Number System To Another. Helpful during first four semesters of the course.</p>
-            <p><a class="btn btn-secondary" href={{ url_for('convert') }}>View details »</a></p>
+            <img src="/static/calendar.jpg" class="avatar">
+            <h2 class="fw-normal" target="_blank" >Academic Calender</h2>
+            <p>Have a note about events of this very EVEN semester and stay updated.</p>
+            <p><a class="btn btn-secondary"target="_blank" href='https://drive.google.com/file/d/1bSal__-9iaQi5pdgKt8n0wmmLxkJouik/view?usp=share_link'>View details »</a></p>
           </div><!-- /.col-lg-4 -->
+
           <div class="col-lg-4">
             <img src="/static/hrtc.jpeg" alt="Avatar" class="avatar">
-            <h2 class="fw-normal">Check 
-              Bus Timings
-            </h2>
-            <p>Tired of waiting for buses? We got you covered. Now no need to wait for buses and get bored. check the timings and get buses on time </p>
-            <p><a class="btn btn-secondary" href={{ url_for('bus_timing') }}>View details »</a></p>
+            <h2 class="fw-normal" >Check Bus Timings</h2>
+            <p>Finaly semesters exams are over. Time to go home with heavhy luggage. Then why to wait for the busses when you can know their timings.</p>
+            <p><a class="btn btn-secondary" target="_blank" href={{ url_for('bus_timing') }}>View details »</a></p>
           </div>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
