--- a/templates/qr.html
+++ b/templates/qr.html
@@ -15,16 +15,16 @@
  }
 
  .login-box {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
-  width: 400px;
+  width: auto;
   padding: 40px;
   transform: translate(-50%, -50%);
   background: rgba(0,0,0,.5);
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
-  border-radius: 10px;
+  border-radius: 50px;
  }
 
  .login-box h2 {
