--- a/templates/home.html
+++ b/templates/home.html
@@ -63,7 +63,7 @@
           <div class="col-lg-4">
             <img src="/static/hrtc.jpeg" alt="Avatar" class="avatar">
             <h2 class="fw-normal" >Check Bus Timings</h2>
-            <p>Finaly semesters exams are over. Time to go home with heavhy luggage. Then why to wait for the busses when you can know their timings.</p>
+            <p>Finaly semester exams are over. Time to go home with heavy luggage. Then why to wait for the busses when you can know their timings.</p>
             <p><a class="btn btn-secondary" target="_blank" href={{ url_for('bus_timing') }}>View details »</a></p>
           </div>
           </div><!-- /.col-lg-4 -->
