--- a/templates/home.html
+++ b/templates/home.html
@@ -16,13 +16,13 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <!--<img src="https://source.unsplash.com/2400x800/?digital" class="d-block w-100" alt="...">-->
-      <img src="/static/forest.jpeg" class="d-block w-100" alt="...">
+      <img src="/static/abv.jpeg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/static/abv3.jpeg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="/static/shimla.jpeg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="/static/snow.jpeg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -54,10 +54,10 @@
           </div><!-- /.col-lg-4 -->
 
           <div class="col-lg-4">
-            <img src="/static/calendar.jpg" class="avatar">
+            <img src="/static/cal.png" class="avatar">
             <h2 class="fw-normal" target="_blank" >Academic Calender</h2>
             <p>Have a note about events of this very EVEN semester and stay updated.</p>
-            <p><a class="btn btn-secondary"target="_blank" href='https://drive.google.com/file/d/1bSal__-9iaQi5pdgKt8n0wmmLxkJouik/view?usp=share_link'>View details »</a></p>
+            <p><a class="btn btn-secondary"target="_blank" href='https://www.himtu.ac.in/wp-content/uploads/2024/08/310724-AC-2024-25.pdf'>View details »</a></p>
           </div><!-- /.col-lg-4 -->
 
           <div class="col-lg-4">
