--- a/templates/base.html
+++ b/templates/base.html
@@ -58,11 +58,11 @@
                 <li><a class="dropdown-item" target="_blank" href="http://himachal-pradesh.indiaresults.com/himtu/mindex.aspx">Exam-Results</a></li>
                 <li><a class="dropdown-item" href={{ url_for('download') }}>Books and Notes</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://www.eduqfix.com/PayDirect/#/student/pay/1OHQRPe16eEggvcMCADtC86BIfKNLGx6UsMKbzkIB4EJycJdnbMtz589iBs9VnWz/1832'>Pay semester fee</a></li>
-                <li><a class="dropdown-item" target="_blank" href='https://www.himtu.ac.in/old-question-papers-for-b-tech/'>Sample Question Papers</a></li>
+                <li><a class="dropdown-item" target="_blank" href='https://www.hptuonline.com/#btech'>Old Question Papers</a></li>
                 <li><a class="dropdown-item" target="_blank" href='https://www.geonlinehub.com/HPTUReval25Dec2022/NewRegistrationByRollNo.aspx'>Online Re-evaluation form</a></li>
-                <li><a class="dropdown-item" target="_blank" href='https://drive.google.com/file/d/1bSal__-9iaQi5pdgKt8n0wmmLxkJouik/view?usp=share_link'>Current Academic Calendar</a></li>
-                <li><a class="dropdown-item" target="_blank" href='https://abvgiet.ac.in/storage/app/media/TimeTable%20Signed992022.pdf'>Time-Table</a></li>
-                <li><a class="dropdown-item" target="_blank" href='https://www.himtu.ac.in/examination-time-table/'>Examination Time-Table</a></li>
+                <li><a class="dropdown-item" target="_blank" href='https://www.himtu.ac.in/wp-content/uploads/2024/08/310724-AC-2024-25.pdf'>Current Academic Calendar</a></li>
+                <li><a class="dropdown-item" target="_blank" href='https://abvgiet.ac.in/time-table'>Time-Table</a></li>
+                <li><a class="dropdown-item" target="_blank" href='https://www.himtu.ac.in/examination-time-table/'>Examination DateSheet</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -72,7 +72,6 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href={{ url_for('lecture_predict') }}>Predict Pending Lectures</a></li>
                 <li><a class="dropdown-item" href={{ url_for('convert') }}>Number System Conversion</a></li>
-                <li><a class="dropdown-item" href={{ url_for('image') }}>Any-Image</a></li>
                 <li><a class="dropdown-item" href={{ url_for('bus_timing') }}>Bus timings</a></li>
                 <li><a class="dropdown-item" href={{ url_for('contacts') }}>Important Contacts</a></li>
                 <li><a class="dropdown-item" href={{ url_for('qr') }}>QR Code Generator</a></li>
